@@ -1,3 +1,10 @@
+2011-03-21  6.6.8-7 Glenn Randers-Pehrson <glennrp@image...>
+  * Revised the PNG8 encoder to use 50% threshold instead of 0% when
+    reducing transparency to binary.  Collapse all resulting fully transparent
+    colors into one (the background color), to reduce the compressed filesize.
+  * First try the 3-3-3 palette instead of 3-3-2, to preserve gray better,
+    when reducing to PNG8.
+
 2011-03-18 6.6.8-7 Anthony Thyssen <A.Thyssen@griffith...>
   * Another fix for -sparse-color and unused color channels
 
